OO-5220: delete resources, wording